--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -254,7 +254,7 @@
                     <td>{{ item.orderNo }}</td>
                     <td>{{ item.orderDate }}</td>
                     <td>
-                        <button mat-icon-button (click)="viewData(item.cid)" title="view">
+                        <button mat-icon-button (click)="viewOrder(item.orderNo)" title="view">
                             <mat-icon style="color: #76838F;" fontSet="material-icons-outlined">visibility</mat-icon>
                         </button>
                     </td>
