--- a/src/components/image/image.component.html
+++ b/src/components/image/image.component.html
@@ -1,4 +1,4 @@
 <div class="container">
     <div class="title">{{ data.name }}</div>
-    <img [src]="data.srcUrl" alt="image" />
+    <img [src]="url()" alt="image" />
 </div>
