--- a/src/components/layout/layout.component.html
+++ b/src/components/layout/layout.component.html
@@ -5,7 +5,8 @@
             @if(sideMenuOpened()){
             <img class="app-title" src="/images/app-title.png">
             }
-            <button mat-icon-button (click)="sideMenuOpened.set(!sideMenuOpened())" [title]="sideMenuOpened() ? 'Close Menu' : 'Open Menu'"><mat-icon>{{ sideMenuOpened() ?
+            <button mat-icon-button (click)="sideMenuOpened.set(!sideMenuOpened())"
+                [title]="sideMenuOpened() ? 'Close Menu' : 'Open Menu'"><mat-icon>{{ sideMenuOpened() ?
                     'keyboard_backspace' : 'menu' }}</mat-icon></button>
         </div>
         <div class="spacing"></div>
@@ -16,22 +17,42 @@
             </div>
             <mat-menu #menu="matMenu" yPosition="below">
                 <button mat-menu-item>
-                  <mat-icon>person_edit</mat-icon>
-                  <span class="options">Update Profile</span>
+                    <mat-icon>person_edit</mat-icon>
+                    <span class="options">Update Profile</span>
                 </button>
                 <button mat-menu-item (click)="logout()">
-                  <mat-icon>logout</mat-icon>
-                  <span class="options">Logout</span>
+                    <mat-icon>logout</mat-icon>
+                    <span class="options">Logout</span>
                 </button>
-              </mat-menu>
+            </mat-menu>
         </div>
     </div>
     <div class="body">
         <div class="sidebar" [style.width.px]="sideMenusWidth()">
             <div class="sidemenus">
                 <br>
+
+
+
                 @for (item of items; track $index) {
                 <!-- if side menu closed, show only icons with center position -->
+                @if(sideMenuOpened() && item.subItems?.length){
+                <div class="center" (click)="item.subItems.length === 0 ? navigate([item.route],[item]) : ''"
+                    [style.justify-content]="!sideMenuOpened() ? 'center' : ''" [title]="item.label"
+                    (click)="item.showSubItem.set(!item.showSubItem())">
+                    <mat-icon [ngClass]="item.selected() ? 'selected' : ''"
+                        [fontSet]="item.selected() ? '' : 'material-icons-outlined'">{{item.icon}}</mat-icon>
+                    <!-- show item label, arrow only if sidemenu opened -->
+                    @if(sideMenuOpened()){
+                    <span [ngClass]="item.selected() ? 'selected' : ''" class="label">{{item.label}}</span>
+                    }
+                    <!-- show arrow only if item.subItems.length > 0 and sidemenu opened -->
+                    <mat-icon [ngClass]="item.selected() ? 'selected' : ''">{{item.showSubItem() ?
+                        'keyboard_arrow_up':'keyboard_arrow_down'}}</mat-icon>
+                </div>
+                }
+
+                @else{
                 <div class="center" (click)="item.subItems.length === 0 ? navigate([item.route],[item]) : ''"
                     [style.justify-content]="!sideMenuOpened() ? 'center' : ''" [title]="item.label">
                     <mat-icon [ngClass]="item.selected() ? 'selected' : ''"
@@ -47,11 +68,29 @@
                         'keyboard_arrow_up':'keyboard_arrow_down'}}</mat-icon>
                     }
                 </div>
+                }
 
-                <!-- sidemenu opened and item.arrow clicked show subItems -->
+                <!-- sidemenu opened and item.arrow clicked, so show subItems -->
                 @if(sideMenuOpened() && item.showSubItem()){
                 @for (subItem of item.subItems; track $index) {
-                <div
+                @if(subItem.subItemsItems?.length){
+                    <div
+                    (click)="subItem.subItemsItems.length === 0 ? navigate([item.route,subItem.route],[item,subItem]) : ''"
+                    (click)="subItem.showSubItemsItem.set(!subItem.showSubItemsItem())">
+                    <ul class="center submenu">
+                        <mat-icon [ngClass]="subItem.selected() ? 'selected' : ''">{{subItem.icon}}</mat-icon>
+                        <span class="label f-1"
+                            [ngClass]="subItem.selected() ? 'selected' : ''">{{subItem.label}}</span>
+                        @if(subItem.subItemsItems?.length){
+                        <mat-icon [ngClass]="item.selected() ? 'selected' : ''">{{subItem.showSubItemsItem()
+                            ?'keyboard_arrow_up' :'keyboard_arrow_down'}}</mat-icon>
+                        }
+                    </ul>
+                </div>
+                }
+
+                @else {
+                    <div
                     (click)="subItem.subItemsItems.length === 0 ? navigate([item.route,subItem.route],[item,subItem]) : ''">
                     <ul class="center submenu">
                         <mat-icon [ngClass]="subItem.selected() ? 'selected' : ''">{{subItem.icon}}</mat-icon>
@@ -64,6 +103,8 @@
                         }
                     </ul>
                 </div>
+                }
+
                 @if(subItem.subItemsItems?.length && subItem.showSubItemsItem()){
                 @for (subItemsItem of subItem.subItemsItems; track $index) {
                 <div>
