--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -98,8 +98,7 @@
                     <td>{{ item.code }}</td>
                     <td>{{ item.category.name }}</td>
                     <td>
-                        <button mat-icon-button
-                            (click)="openImage('data:image/jpeg;base64,' + item.encodedResource,item.name)"><mat-icon>image</mat-icon></button>
+                        <button mat-icon-button (click)="openImage(item.fileId)"><mat-icon>image</mat-icon></button>
                     </td>
                     <td>{{ item.saveDt }}</td>
                     <td>
