--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -80,18 +80,21 @@
   height: 100%;
   display: flex;
   align-items: center;
-  border-right: 5px solid #a294f9;
-  overflow: hidden;
+  // border-right: 5px solid #a294f9;
+  overflow-y: scroll;
+  overflow-x: hidden;
   background-color: color.$sidebarBackgroundColor;
   color: #fff;
   font-family: ROBOTO-MEDIUM;
   transition: width 0.4s ease-in-out;
+  // scrollbar-color: #fff #ccc;
+  scrollbar-width: thin;
 }
 
 .content {
   width: calc(100vw - 80px);
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   background-color: color.$bodyBackgroundColor;
   padding: 20px 40px;
 }
