--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <router-outlet></router-outlet>
+
+
+<!-- <div class="loader"></div> -->
+
+<div class="preload" id="preload">
+    <div class="preloader" id="preloader">
+        <div class="center-hole"></div>
+    </div>
+</div>
