--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,8 +177,8 @@ h3 {
     }
 
     &[type="button"] {
-      background-color: #f8f9fa;
-      color: red;
+      background-color: #ff5252;
+      color: #f8f9fa;
       border: 1px solid #ced4da;
 
       &:hover {
