--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,10 @@
 
 <!-- <div class="loader"></div> -->
 
+@if(isLoading()){
 <div class="preload" id="preload">
     <div class="preloader" id="preloader">
         <div class="center-hole"></div>
     </div>
 </div>
+}
