--- a/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/edit-item-master/edit-item-master.component.html
@@ -89,7 +89,7 @@
     <div class="input-field"></div>
     <div class="action-btns">
       <button mat-flat-button type="submit">Submit</button>
-      <button mat-button type="button" style="color: red;padding: 0 20px;" (click)="navigateToListItemPage()">
+      <button mat-button type="button" style="padding: 0 20px;" (click)="navigateToListItemPage()">
         Cancel
       </button>
     </div>
