--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -39,7 +39,7 @@
 
 .preload {
     position: fixed;
-    display: none;
+    display: block;
     width: 100%;
     height: 100%;
     top: 0;
@@ -82,7 +82,7 @@
     animation: load2 1s infinite ease 1s;
   }
   .preloader {
-    display: none;
+    display: block;
     font-size: 8px;
     text-indent: 0px;
     margin: 5em auto;
