--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -26,7 +26,25 @@
             &nbsp;&nbsp;&nbsp;
             <button mat-flat-button class="btn-sm"
                 (click)="fileInput.click()"><mat-icon>upload</mat-icon>Upload</button> &nbsp;&nbsp;&nbsp;
-            <input type="file" #fileInput hidden (change)="onFileSelected($event)" />
+            <input type="file" #fileInput hidden (change)="onFileSelected($event,'customer-item')" />
+            }
+            @if(this.curModule() === brandMaster()){
+            <button mat-flat-button class="btn-sm"
+                (click)="fileInput.click()"><mat-icon>upload</mat-icon>Upload</button> &nbsp;&nbsp;&nbsp;
+            <input type="file" #fileInput hidden (change)="onFileSelected($event,'brand')" />
+            }
+            @if(this.curModule() === itemCategoryMaster()){
+            <button mat-flat-button class="btn-sm"
+                (click)="fileInput.click()"><mat-icon>upload</mat-icon>Upload</button> &nbsp;&nbsp;&nbsp;
+            <input type="file" #fileInput hidden (change)="onFileSelected($event,'item-category')" />
+            }
+            @if(this.curModule() === itemMaster()){
+            <button mat-flat-button class="btn-sm"
+                (click)="download(itemMaster())"><mat-icon>download</mat-icon>Download</button>
+            &nbsp;&nbsp;&nbsp;
+            <button mat-flat-button class="btn-sm"
+                (click)="fileInput.click()"><mat-icon>upload</mat-icon>Upload</button> &nbsp;&nbsp;&nbsp;
+            <input type="file" #fileInput hidden (change)="onFileSelected($event,'item')" />
             }
             @if(this.curModule() === orderMaster()){
             <select (change)="onSelectCustomer($event)" class="select">
@@ -39,8 +57,6 @@
             &nbsp;&nbsp;&nbsp;
             <button mat-flat-button class="btn-sm"
                 (click)="download(orderMaster())"><mat-icon>download</mat-icon>Download</button>
-            &nbsp;&nbsp;&nbsp;
-            <input type="file" #fileInput hidden (change)="onFileSelected($event)" />
             }
             @if(this.curModule() !== orderMaster()){
             <button mat-flat-button class="btn-sm" (click)="navigateToCreateData()">
