--- a/src/pages/auth/login/login.component.html
+++ b/src/pages/auth/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <form [formGroup]="form" (ngSubmit)="submit()">
         <div class="input-field">
-            <label for="code">Employee Code : </label>
+            <label for="code">Email : </label>
             <input type="text" formControlName="code" required>
         </div>
         <br>
