--- a/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.html
+++ b/src/pages/master/aos-user/user-master/edit-user-master/edit-user-master.component.html
@@ -34,7 +34,7 @@
     </div>
     <div class="action-btns">
       <button mat-flat-button type="submit">Update</button>
-      <button mat-button type="button" style="color: red;padding: 0 20px;" (click)="navigateToListUserPage()">
+      <button mat-button type="button" style="padding: 0 20px;" (click)="navigateToListUserPage()">
         Cancel
       </button>
     </div>
