--- a/src/components/layout/layout.component.scss
+++ b/src/components/layout/layout.component.scss
@@ -7,18 +7,13 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid #ccc;
-  position: relative;
-  -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 2px 15px 0px #ccc;
+  // position: relative;
+  // -webkit-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  // -moz-box-shadow: 0px 2px 10px 0px rgba(0, 0, 0, 0.75);
+  // box-shadow: 0px 2px 15px 0px #ccc;
 
-  background-color: #fff;
+  // background-color: #fff;
   padding: 0 25px 0 10px;
-
-  h3 {
-    margin: 0;
-    font-weight: 500;
-  }
 
   .header {
     display: flex;
@@ -45,18 +40,11 @@
   }
 
   .user {
-    display: flex;
-    align-items: center;
-    margin-top: 20px;
-    mat-icon {
-      font-size: 1.5rem;
-      color: #76838F;
-    }
-
-    div > .username {
-      padding-right: 5px;
+    .user-area {
+      display: flex;
+      align-items: center;
+      color: #76838f;
       font-family: ROBOTO-MEDIUM;
-      color: #76838F;
     }
 
     &:hover {
