--- a/src/pages/auth/login/login.component.scss
+++ b/src/pages/auth/login/login.component.scss
@@ -1,72 +1,52 @@
 @use "../../../constants/colors.scss" as color;
 
-.container {
-  width: 20%;
-  margin: 150px auto;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-form {
-  width: auto;
-  background-color: whitesmoke;
-  padding: 25px;
-}
-
-.action-btns {
+.container{
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20vh;
+}
 
-  button {
-    font-size: 1rem;
-    font-family: ROBOTO-LIGHT;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s ease, color 0.3s ease;
-    padding: 8px 25px;
-
-    &[type="submit"],
-    &[type="button"] {
-      background-color: #007bff;
-      color: white;
-      margin-right: 25px;
-
-      &:hover {
-        background-color: #0056b3;
-      }
-    }
-
-    &[type="reset"] {
-      background-color: #f8f9fa;
-      color: red;
-      border: 1px solid #ced4da;
-
-      &:hover {
-        background-color: #e2e6ea;
-      }
-    }
+.app-data{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  
+  .icon{
+    width: 250px;
+    height: 250px;
+  }
+  
+  .title{
+    width: 500px;
   }
 }
 
-.input-container {
-  position: relative;
-  display: inline-flex;
-  align-items: center;
-}
+.login-form{
+  flex: 1;
 
-input {
-  border: 1px solid #ccc;
-  padding: 10px;
-  border-radius: 5px;
-  font-size: 1rem;
-  width: 250px;
-  padding-right: 40px; 
-  box-sizing: border-box;
-}
+  label{
+    font-weight: bold;
+    color: color.$iconColor;
+    letter-spacing: 0.05rem;
+  }
 
-input:focus {
-  outline-color: blue;
-}
+  .input-field{
+    width: 300px;
+  }
 
-input::placeholder {
-  font-size: 1rem;
+  .action-btns{
+    display: flex;
+    align-items: center;
+    button{
+      width: 138px;
+    }
+  }
 }
