--- a/src/pages/dashboard/dashboard.component.html
+++ b/src/pages/dashboard/dashboard.component.html
@@ -1,8 +1,8 @@
 <div class="container">
   <div class="title-animation">
-    For any queries, contact us at 8080021333 or via email at
+    <!-- For any queries, contact us at 8080021333 or via email at
     {{ "info@applestationers.com" }}. Support time from 10:30 am to 5:00 pm
-    (Monday to Saturday)
+    (Monday to Saturday) -->
   </div>
   <br>
   <br>
