--- a/src/components/table/table.component.html
+++ b/src/components/table/table.component.html
@@ -88,7 +88,7 @@
                 <tr class="row-data">
                     <td>{{ $index + 1 + offset() * limit() }}.</td>
                     <td>{{ item.firstName }}</td>
-                    <td>{{ item.middleName || '-' }}</td>
+                    <td>{{ item.middleName }}</td>
                     <td>{{ item.lastName }}</td>
                     <td>{{ item.email }}</td>
                     <td>{{ item.mobileNo }}</td>
