--- a/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
+++ b/src/pages/master/aos-user/item-master/create-item-master/create-item-master.component.html
@@ -16,7 +16,7 @@
       </select>
     </div>
     <div class="input-field">
-      <label for="image">Item Picture (Fileupload/Image Link)<span class="imp">*</span></label>
+      <label for="image">Item Picture (Fileupload/Image Link)</label>
       <input type="file" #fileInput hidden (change)="onFileSelected($event)"/>
       @if(selectedFile){
       <div class="file">
