--- a/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
+++ b/src/pages/master/aos-user/item-category-master/create-item-category-master/create-item-category-master.component.html
@@ -8,7 +8,7 @@
         <br>
         <div class="action-btns">
             <button type="submit" (click)="submit()">Submit</button>
-            <button type="button" (click)="closeDialog()">Cancel</button>
+            <button type="button" (click)="closeDialog('cancel')">Cancel</button>
         </div>
     </form>
 </mat-dialog-content>
