--- a/src/components/image/image.component.scss
+++ b/src/components/image/image.component.scss
@@ -1,4 +1,16 @@
+@use "../../constants/colors.scss" as color;
+
+.container{
+    padding: 20px;
+    font-family: ROBOTO-MEDIUM;
+
+    .title{
+        text-align: center;
+        color: color.$iconColor;
+    }
+}
+
 img{
-    width: 729x;
-    height: 729px;
+    width: 500px;
+    height: 500px;
 }
