--- a/src/components/snackbar/snackbar.component.html
+++ b/src/components/snackbar/snackbar.component.html
@@ -1,5 +1,8 @@
 <div class="container" [style.background-color]="data.backgroundColor">
-    <span class="label" [style.color]="data.color" matSnackBarLabel>{{ data.msg }}</span>
+    <div class="flex">
+        <span class="title" [style.color]="data.color" matSnackBarLabel>{{ data.title }}</span>
+    <span class="msg" [style.color]="data.color" matSnackBarLabel>{{ data.msg }}</span>
+    </div>
     <span matSnackBarActions>
         <button mat-icon-button matSnackBarAction (click)="snackBarRef.dismissWithAction()">
             <mat-icon [style.color]="data.color">cancel</mat-icon>
