--- a/src/components/snackbar/snackbar.component.scss
+++ b/src/components/snackbar/snackbar.component.scss
@@ -1,11 +1,20 @@
 .container {
   display: flex;
-  padding: 10px;
   border-top-left-radius: 5px;
   border-bottom-left-radius: 5px;
 }
 
-.label {
+.flex{
+  display: flex;
+
+}
+
+.title {
+  font-size: 2rem;
+  font-family: ROBOTO-MEDIUM;
+}
+
+.msg {
   font-size: 1.1rem;
   font-family: ROBOTO-MEDIUM;
 }
