--- a/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.scss
+++ b/src/pages/master/customer/customer-item-master/edit-customer-item-master/edit-customer-item-master.component.scss
@@ -1,9 +1,27 @@
 @use "../../../../../constants/colors.scss" as color;
 
-.container {
+.breadcrumb {
+  background-color: #fff;
+  margin-bottom: 15px;
+  padding: 10px 25px;
+  font-family: ROBOTO-MEDIUM;
+  color: #76838f;
+
+  display: flex;
+  justify-content: space-between;
+  border-radius: 5px;
+
+  .title {
+    font-size: 1.1rem;
+    color: #0057a1;
+  }
+}
+
+
+.form-container {
   width: auto;
   background-color: #fff;
-  padding: 10px 50px 25px;
+  padding: 15px 25px 25px;
   display: flex;
   flex-wrap: wrap;
 
@@ -19,28 +37,4 @@ h3 {
   font-family: ROBOTO-MEDIUM;
   font-weight: 400;
   color: #76838f;
-}
-
-.input-field {
-
-  select {
-    height: calc(2.0625rem + 2px);
-    padding: 0.375rem 0.75rem;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
-    font-size: 1rem;
-    background-color: #fff;
-    color: #495057;
-  }
-
-  select {
-    appearance: none;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSIxNCIgaGVpZ2h0PSIxNCIgdmlld0JveD0iMCAwIDE0IDE0Ij48cGF0aCBkPSJNMiA1bDYgNiA2LTZ6IiBmaWxsPSIjNTE1MTUxIi8+PC9zdmc+");
-    background-repeat: no-repeat;
-    background-position: right 10px center;
-    background-size: 12px;
-  }
-
 }
