--- a/src/styles.scss
+++ b/src/styles.scss
@@ -27,6 +27,11 @@
   src: url("assets/fonts/roboto/Roboto-Regular.ttf") format("truetype");
 }
 
+@font-face {
+  font-family: POPPIN-MEDIUM;
+  src: url("assets/fonts/roboto-slab/RobotoSlab-Medium.ttf") format("truetype");
+}
+
 html,
 body {
   height: 100%;
